--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,6 @@ google-auth==2.27.0
 google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
 google-api-python-client==2.116.0
-chromadb==0.4.22
+google-api-python-client==2.116.0
 numpy==1.26.3
 pandas==2.2.0
