--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,3 @@
-# Environment variables for backend
-OPENAI_API_KEY=your_openai_api_key_here
-SLACK_TOKEN=your_slack_token_here
-JIRA_API_KEY=your_jira_api_key_here
-JIRA_SERVER=https://your-domain.atlassian.net
-JIRA_PROJECT=PROJECT
-GMAIL_CREDENTIALS=your_gmail_credentials_json_here
+OPENAI_API_KEY=sk-proj-...
+# Supabase Auth
+SUPABASE_JWT_SECRET=your-supabase-jwt-secret-from-settings-api
