--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.87.1",
+    "axios": "^1.6.5",
+    "lucide-react": "^0.309.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.0",
-    "axios": "^1.6.5",
-    "reactflow": "^11.10.4",
-    "lucide-react": "^0.309.0",
-    "react-markdown": "^9.0.1"
+    "reactflow": "^11.10.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
